@@ -1,17 +1,11 @@
 //4. WAP for resolving relatives URI
 
 import java.net.*;
-import java.io.*;
 
 public class Lab4{
-    public static void main(String[] args) throws MalformedURLException, IOException{
-        URL u1 = new URL("http://127.0.0.1/");
-        URL u2 = new URL(u1, "goat.html");
-        InputStream in = u2.openStream();
-        int c;
-        while((c = in.read()) != -1){
-            System.out.print(Character.toString(c));
-        }
-        in.close();
+    public static void main(String[] args) throws URISyntaxException{
+        URI u1 = new URI("http://127.0.0.1/");
+        URI u2 = u1.resolve("goat.html");
+        System.out.println("The resolved URI is "+u2.toString());
     }
 }
